[SYN-12] Create measurement result API (#28)
* [SYN-77] Create measurement result datastore (#25)

* add: create measurement result

* add: create measurement test

* [SYN-78] Add measurement result API (#26)

* add: handler interface

* add: createBloodPressure handler

* add: createGlucose

* add: patient ref

* mockgen

* add: foreign key with testcases

* fix: patient table not created

* add: create blood pressure testcases

* add: CreateGlucose

* [SYN-81]Add swagger for create measurement (#27)

* add: swagger to CreateGlucose and CreateBloodPressure

* fix: created_at and updated_at json field

* add action cache

* add: RegisterHandlers to server

* add caching
