# docs/swagger.yaml
@@ -2,6 +2,54 @@ basePath: /patient/api
 consumes:
 - application/json
 definitions:
+  datastore.BloodPressure:
+    properties:
+      created_at:
+        type: string
+      date_time:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      diastolic:
+        type: integer
+      id:
+        type: integer
+      patient_id:
+        type: integer
+      pulse:
+        type: integer
+      systolic:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  datastore.Glucose:
+    properties:
+      created_at:
+        type: string
+      date_time:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      is_before_meal:
+        type: boolean
+      patient_id:
+        type: integer
+      updated_at:
+        type: string
+      value:
+        type: integer
+    type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
   handler.AddCreditCardRequest:
     properties:
       card_token:
@@ -9,10 +57,39 @@ definitions:
     required:
     - card_token
     type: object
+  handler.BloodPressureRequest:
+    properties:
+      date_time:
+        type: string
+      diastolic:
+        type: integer
+      pulse:
+        type: integer
+      systolic:
+        type: integer
+    required:
+    - date_time
+    - diastolic
+    - pulse
+    - systolic
+    type: object
   handler.ErrorResponse:
     properties:
       message:
         type: string
+    type: object
+  handler.GlucoseRequest:
+    properties:
+      date_time:
+        type: string
+      is_before_meal:
+        type: boolean
+      value:
+        type: integer
+    required:
+    - date_time
+    - is_before_meal
+    - value
     type: object
   handler.SigninRequest:
     properties:
@@ -113,6 +190,70 @@ paths:
       summary: Verify OTP and get token
       tags:
       - Auth
+  /measurement/blood-pressure:
+    post:
+      parameters:
+      - description: Blood pressure information
+        in: body
+        name: BloodPressureRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handler.BloodPressureRequest'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/datastore.BloodPressure'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - UserID: []
+      - JWSToken: []
+      summary: Record blood pressure
+      tags:
+      - Measurement
+  /measurement/glucose:
+    post:
+      parameters:
+      - description: Glucose level information
+        in: body
+        name: GlucoseRequest
+        required: true
+        schema:
+          $ref: '#/definitions/handler.GlucoseRequest'
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/datastore.Glucose'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      security:
+      - UserID: []
+      - JWSToken: []
+      summary: Record glucose level
+      tags:
+      - Measurement
   /payment/credit-card:
     get:
       responses:
